src/test/resources/invalid/NoInitialState.sc
/* (c) https://github.com/MontiCore/monticore */

statechart NoInitialState {
  state EngineOff;              
  state EngineRunning;
}